added association input to the Deal create request
