# generated/v3/deals/api/openapi.yaml
@@ -1160,6 +1160,12 @@ components:
             dealstage: presentationscheduled
             hubspot_owner_id: "910901"
             pipeline: default
+          associations:
+          - to:
+              id: 12345
+            types:
+            - associationCategory: HUBSPOT_DEFINED
+              associationTypeId: 20
         - properties:
             amount: "1500.00"
             closedate: 2019-12-07T16:50:06.678Z
@@ -1167,6 +1173,12 @@ components:
             dealstage: presentationscheduled
             hubspot_owner_id: "910901"
             pipeline: default
+          associations:
+          - to:
+              id: 12345
+            types:
+            - associationCategory: HUBSPOT_DEFINED
+              associationTypeId: 20
       properties:
         inputs:
           items:
@@ -1351,13 +1363,46 @@ components:
           dealstage: presentationscheduled
           hubspot_owner_id: "910901"
           pipeline: default
+        associations:
+        - to:
+            id: 12345
+          types:
+          - associationCategory: HUBSPOT_DEFINED
+            associationTypeId: 20
       properties:
         properties:
           additionalProperties:
             type: string
           type: object
+        associations:
+          items:
+            $ref: '#/components/schemas/AssociationInput'
+          type: array
       required:
       - properties
+      type: object
+    AssociationInput:
+      properties:
+        to:
+          $ref: '#/components/schemas/AssociationInput_to'
+        types:
+          items:
+            $ref: '#/components/schemas/AssociationTypeInput'
+          type: array
+      required:
+      - to
+      - types
+      type: object
+    AssociationTypeInput:
+      properties:
+        associationCategory:
+          type: string
+        associationTypeId:
+          format: int64
+          type: integer
+      required:
+      - associationCategory
+      - associationTypeId
       type: object
     CollectionResponseSimplePublicObjectWithAssociationsForwardPaging:
       example:
@@ -1692,6 +1737,13 @@ components:
           type: string
       required:
       - after
+      type: object
+    AssociationInput_to:
+      properties:
+        id:
+          type: string
+      required:
+      - id
       type: object
   securitySchemes:
     hapikey:
